# EEG-based-BCI-for-grasp-prediction

./: LICENSE  README.md
ChannelLocation/: EGIAmpServer.loc  EGIAmpServer64Chan.loc
Code/: 40_artifact_correction_ica.ipynb  Grasp Final PSD.ipynb  Grasp Final Spectopo.ipynb  Grasp Final Time Domain.ipynb  Grasp Full v2.ipynb  Grasp Full v3.ipynb  Grasp Pilot v3.ipynb  PredictionOnDrumBeat.ipynb  cf_analysis_graps_pcs.m  cf_analysis_grasp.m  const.py  eeglabhist-v2.m  kinematics.ipynb  preprocessing.ipynb
Code/.ipynb_checkpoints/: Grasp Final PSD-checkpoint.ipynb  Grasp Final Time Domain-checkpoint.ipynb
Code/Pre-processing/: cf_analysis_graps_pcs.m  pre_processing_grasp_paper.m
Code/Scripts/: black_out_video.py  blur_reg.py
Code/old/: Grasp Final PSD.ipynb  Grasp Final Spectopo.ipynb  Grasp Final Time Domain.ipynb  Grasp Final Wavelet.ipynb  Grasp Final v1.ipynb  Grasp Pilot v1.ipynb  Grasp Pilot v2.ipynb  Grasp-BDF  eeglabhist-v1.m  eeglabhist-v3.m  grasp_mid_sem_preprocessing.m  spectopo_grasp.m
Code/old/Pre-processing/: cf_analysis_grasp.m
Code/old/Scripts/: blur_reg.py
EGIAmpServer/: .appveyor.yml  .travis.yml  CMakeLists.txt  EGIAmpWindow.cpp  EGIAmpWindow.h  readme.md
Experiment Design/: Left-vs-right-real-time.pyp  grasp-data-acquisition.pyp  grasp-real-time.pyp  grasp-test.psyexp  grasp-test.py  grasp-test_lastrun.py  hand-grasp-v2.psyexp  hand-grasp-v2_lastrun.py  hand-grasp.psyexp  palmPosA.csv  palmPosB.csv  palmPosC.csv  palmPosD.csv  palmPosE.csv  palmPosF.csv  palmPosGroup.csv  topoplot.pyp
Experiment Design/stim/: palmUp.csv
